--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,5 +5,8 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
+   <h1> Create A Basketball Team! </h1>
+   <form method="POST" action="/food">
+     <p>Team Name:<input type="text" name="name"></p>
  </body>
 </html>
