Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,6 +7,12 @@
  <body>
    <h1> Create A Basketball Team! </h1>
    <form method="POST" action="/food">
-     <p>Team Name:<input type="text" name="name"></p>
+     <p> Team Name: <input type="text" name="name"></p>
+     <p> Coach: <input type="text" name="name"></p>
+     <p> Point Guard: <input type="text" name="name"></p>
+     <p> Shooting Guard: <input type="text" name="name"></p>
+     <p> Small Forward: <input type="text" name="name"></p>
+     <p> Power Forward: <input type="text" name="name"></p>
+     <p> Center: <input type="text" name="name"></p>
  </body>
 </html>
