Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -14,7 +14,7 @@
      <p> Small Forward: <input type="text" name="name"></p>
      <p> Power Forward: <input type="text" name="name"></p>
      <p> Center: <input type="text" name="name"></p>
-     <input type="submit">
+     <input type="submit" id="submit">
    </form>
  </body>
 </html>
