--- a/views/team.erb
+++ b/views/team.erb
@@ -6,13 +6,13 @@
  </head>
  <body>
    <form method="POST" action="/food">
-     <p> Team Name: <input type="text" name="name"></p>
-     <p> Coach: <input type="text" name="coach"></p>
-     <p> Point Guard: <input type="text" name="pg"></p>
-     <p> Shooting Guard: <input type="text" name="sg"></p>
-     <p> Small Forward: <input type="text" name="sf"></p>
-     <p> Power Forward: <input type="text" name="pf"></p>
-     <p> Center: <input type="text" name="c"></p>
+     <p> Team Name: <%="#{params[:name]}"%> </p>
+     <p> Coach: <%="#{params[:coach]}"%> </p>
+     <p> Point Guard: </p>
+     <p> Shooting Guard: </p>
+     <p> Small Forward: </p>
+     <p> Power Forward: </p>
+     <p> Center:</p>
      <input type="submit" id="submit">
    </form>
 
