--- a/views/team.erb
+++ b/views/team.erb
@@ -8,11 +8,11 @@
    <form method="POST" action="/food">
      <p> Team Name: <%="#{params[:name]}"%> </p>
      <p> Coach: <%="#{params[:coach]}"%> </p>
-     <p> Point Guard: </p>
-     <p> Shooting Guard: </p>
-     <p> Small Forward: </p>
-     <p> Power Forward: </p>
-     <p> Center:</p>
+     <p> Point Guard: <%="#{params[:pg]}"%> </p>
+     <p> Shooting Guard: <%="#{params[:sg]}"%> </p>
+     <p> Small Forward: <%="#{params[:sf]}"%> </p>
+     <p> Power Forward: <%="#{params[:pf]}"%> </p>
+     <p> Center: <%="#{params[:c]}"%></p>
      <input type="submit" id="submit">
    </form>
 
