--- a/views/team.erb
+++ b/views/team.erb
@@ -5,7 +5,7 @@
   <title>Basketball Team</title>
  </head>
  <body>
-   <form method="POST" action="/food">
+   <form>
      <p> Team Name: <%="#{params[:name]}"%> </p>
      <p> Coach: <%="#{params[:coach]}"%> </p>
      <p> Point Guard: <%="#{params[:pg]}"%> </p>
